<resources>
    <string name="app_name">Aura</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signed_in">Signed in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signed_in_cached">Signed in with cached credentials</string>
    <string name="resend_confirmation">Resend Email Confirmation</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email_address">Please enter your email address</string>
    <string name="available_timezone">Available timezones</string>
    <string name="enter_share_email_address">Please enter the user email address to which
        the device is to be shared.</string>
    <string name="confirmation_resent">A confirmation email was sent. Check your email account for details.</string>
    <string name="password_reset">An email was sent with intstructions to reset your password.</string>
    <string name="share_success">Device is now shared.</string>
    <string name="create_share">Create Share</string>
    <string name="time_zone_update_success">Device timezone updated.</string>
     <string name="oauth_empty_html"><![CDATA[<font color="#005500"><H3><i>Authenticating with [[PROVIDER]]...</i></H3></font>
    ]]> </string>
    <string name="email_address">Email</string>
    <string name="email_address_new">New Email</string>
    <string name="update_email_address">Update Email</string>
    <string name="role">Role</string>
    <string name="role_name">Role Name</string>
    <string name="optional">optional</string>
    <string name="access">Access</string>
    <string name="read_only">Read only</string>
    <string name="read_write">Read\//Write</string>
    <string name="none">None</string>
    <string name="access_control_text">Access control for the shared device. Role Name is
        the full string(i.e. \"OEM::Ayla::EndUser\") used for RBAC. \nNote: Role Name and
        Operation are mutually exclusive parameters.</string>
    <string name="share_date_description">Control when the share becomes active, and when
        and if it expires. These values are optional.</string>
    <string name="start_date">Start Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="end_date">End Date</string>
    <string name="delete_share">Delete share</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="country">Country</string>
    <string name="phone_country_code">Phone country code</string>
    <string name="phone_number">Phone number</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zip</string>
    <string name="sign_up_success">Sign up successful! Check your email for further instructions.</string>
    <string name="fetching_profile">Fetching your profile from the service...</string>
    <string name="update_profile">Update Profile</string>
    <string name="updating_profile">Updating your profile</string>
    <string name="profile_udpated">Your profile was updated.</string>
    <string name="ok">Ok</string>
    <string name="setup_failed">Could not connect device to service. Please reset device and
        retry</string>
    <string name="device_registered">Device is already registered</string>
    <string name="confirm_connection_error">Error in confirming device connection </string>
    <string name="account_details">Account Details</string>
    <string name="device_name">Device Name</string>
    <string name="dsn">DSN</string>
    <string name="product_name">Product Name</string>
    <string name="connected_at">Connected At</string>
    <string name="connection_status">Connection Status</string>
    <string name="device_type">Device Type</string>
    <string name="lan_enabled">LAN enabled</string>
    <string name="lan_ip">LAN IP</string>
    <string name="location">Location</string>
    <string name="mac">MAC</string>
    <string name="model">Model</string>
    <string name="oem_model">OEM Model</string>
    <string name="product_class">Product Class</string>
    <string name="template_id">Template ID</string>
    <string name="device_details">Device Details</string>
    <string name="device_properties">Device Properties</string>
    <string name="property_read_only">Property is read-only</string>
    <string name="action_unregister">Unregister Device</string>
    <string name="registration_type">Registration type: %s</string>
    <string name="action_register">Register Device</string>
    <string name="action_share">Share Device</string>
    <string name="share_device_name">Share %s</string>
    <string name="share_specify_role">Input role name if no access control is specified.</string>
    <string name="capabilities">Capabilities</string>
    <string name="you_can_share">You can share this device with another registered Ayla
        user.</string>
    <string name="user_email">User Email</string>
    <string name="action_timezone">TimeZone</string>
    <string name="register_success">Successfuly registered device</string>
    <string name="register_error">Error in registration </string>
    <string name="unregister_confirm">Are you sure you want to unregister this device from your account?</string>
    <string name="unregistering">Unregistering device</string>
    <string name="registering">Registering device</string>
    <string name="signing_out">Signing out...</string>
    <string name="deleting_account">Deleting account...</string>
    <string name="signing_in_cached">Signing in with cached credentials...</string>
    <string name="text_null">null</string>
    <string name="fetch_all_properties">Fetch All Properties</string>
    <string name="fetching_all_properties">Fetching all properties from the cloud...</string>
    <string name="cannot_be_parsed">Value cannot be parsed to</string>
    <string name="sending_signup_token">Confirming your email address...</string>
    <string name="sign_up_complete">Sign-up complete. You may now sign in.</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="set_new_password">Set Password</string>
    <string name="change_password_success">Password changed successfully.</string>
    <string name="password_no_match">Password and confirmation do not match</string>
    <string name="updating_password">Updating your password. Please wait...</string>
    <string name="email_send_error">Error in creating message.</string>
    <string name="push_button">Push registration button on device</string>
    <string name="property_notifications">Notification</string>
    <string name="property_notification">Property Notification</string>
    <string name="notification_name">Notification name</string>
    <string name="condition">Condition</string>
    <string name="has">has</string>
    <string name="notify">Notify</string>
    <string name="changed">Changed</string>
    <string name="value">Value...</string>
    <string name="any">Any</string>
    <string name="when">When</string>
    <string name="send_notifications_when">Send notifications when:</string>
    <string name="is_turned_on">is turned on</string>
    <string name="is_turned_off">is turned off</string>
    <string name="is_detected">Motion detected</string>
    <string name="is_stopped">Motion stopped</string>
    <string name="on_or_off">is turned on or off</string>
    <string name="becomes_greater_than">becomes greater than</string>
    <string name="symbol_equals"> = </string>
    <string name="symbol_greater_than"> &gt; </string>
    <string name="symbol_less_than"> &lt; </string>
    <string name="symbol_greater_or_equal"> &gt; = </string>
    <string name="symbol_less_or_equal"> &lt; = </string>
    <string name="becomes_less_than">becomes less than</string>
    <string name="changes">changes</string>
    <string name="error_value">No value specified for comparison.</string>
    <string name="notify_contacts">Notify these contacts:</string>
    <string name="loading_contacts">Loading Contacts...</string>
    <string name="save_notifications">Save Notifications</string>
    <string name="device_notifications">Notifications</string>
    <string name="push_notifcations_not_supported">Push notifications not supported</string>
    <string name="notifications_not_enabled">Property notifications are not available on this
        device</string>
    <string name="delete_notification_title">Delete Notification?</string>
    <string name="delete_notification_message">Do you want to remove the notification \"%s\"?</string>
    <string name="delete_notification_failed">Delete notification failed. Please try again later.</string>
    <string name="unknown_error">An unknown error has occurred</string>
    <string name="contact_phone_required">This contact cannot receive SMS messages</string>
    <string name="contact_email_required">This contact cannot receive email notifications</string>
    <string name="choose_name">Please choose a name for your notification</string>
    <string name="no_contacts_selected">Please select at least one contact to be notified via email or SMS</string>
    <string name="property_motion_sensor_friendly_name">Motion Sensor</string>
    <string name="notification_created">The notification was created successfully</string>
    <string name="no_value_chosen">Please choose a value to compare with</string>
    <string name="start_button_text">Start</string>
    <string name="iterations">Iterations (100 max)</string>
    <string name="action_run_tests">Run device tests...</string>
    <string name="stop_button_text">Stop</string>
    <string name="clear_button_text">Clear</string>
    <string name="all_tests">Run All Test Cases</string>
    <string name="test_runner_title">Test Runner</string>
    <string name="stop_after_error_textview">Stop after error (0 = never)</string>
    <string name="confirmation_template_id">template_english</string>
    <string name="confirmation_email_subject">Aura bids you welcome!</string>
    <string name="password_reset_template_id">aura_passwd_reset_template_01</string>
    <string name="share_email_template_id">aura_passwd_reset_template_01</string>
    <string name="rename_device">Rename device</string>
    <string name="schedule_active_switch">Active</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="schedule_properties_update_description">Select which action you would like to
        update with this schedule:</string>
    <string name="action_value">Value</string>
    <string name="action_execute">Execute When</string>
    <string name="action_remove_all">Remove All</string>
    <string name="action_save">Save</string>
    <string name="action_lan_ota">LAN OTA</string>
    <string name="action_factory_reset">Factory Reset</string>
    <string name="send_push_notifications">Send push notification to this device</string>
</resources>