<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/icon_compose"
        android:id="@+id/action_rename_device"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/rename_device"/>
    <item
        android:icon="@drawable/icon_device_details"
        android:id="@+id/action_device_details"
        android:orderInCategory="100"
        android:title="@string/device_details"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_fetch_all_properties"
        android:orderInCategory="101"
        android:title="@string/fetch_all_properties"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_run_tests"
        android:orderInCategory="102"
        android:title="@string/action_run_tests"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_timezone"
        android:orderInCategory="103"
        android:title="@string/action_timezone"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_unregister"
        android:orderInCategory="104"
        android:title="@string/action_unregister"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_factory_reset"
        android:orderInCategory="105"
        android:title="@string/action_factory_reset"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_lan_ota"
        android:orderInCategory="106"
        android:title="@string/action_lan_ota"
        app:showAsAction="never"/>
</menu>