<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:layout_height="match_parent"
                                            android:layout_width="match_parent"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            android:background="@color/bg_grey">
<LinearLayout android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/bg_grey">

    <TextView
        android:id="@+id/page_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_name"
        android:textAllCaps="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:id="@+id/notification_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notification_name"
            android:imeOptions="actionDone"
            android:background="@drawable/background_edittext"
            android:padding="5dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/textview_condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/condition"
        android:textAllCaps="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:id="@+id/linear_layout_when">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/when"
                android:textColor="@android:color/black"/>

            <Spinner
                android:id="@+id/property_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:layout_below="@+id/linear_layout_when"
            android:id="@+id/linear_layout_has">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/has"
                android:textColor="@android:color/black"/>

            <android.support.design.widget.TabLayout
                android:id="@+id/tablayout_notifications"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="3"
                app:tabPadding="5dp"
                app:tabTextAppearance="@style/customTabText"
                >

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/changed"
                    />

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value"/>

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/any"/>

            </android.support.design.widget.TabLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_comparators"
            android:layout_below="@+id/linear_layout_has"
            android:layout_marginTop="10dp"
            android:layout_margin="10dp">

            <android.support.design.widget.TabLayout
                android:layout_width="match_parent"
                android:layout_toLeftOf="@+id/edittext_value"
                android:layout_height="30dp"
                android:id="@+id/tablayout_comparators"
                app:tabPadding="5dp"
                app:tabTextAppearance="@style/customTabText">

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symbol_equals"
                    android:padding="5dp"
                    />

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/symbol_greater_than"/>

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/symbol_less_than"/>

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/symbol_greater_or_equal"/>

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/symbol_less_or_equal"/>

            </android.support.design.widget.TabLayout>

            <EditText
                android:layout_marginLeft="10dp"
                android:id="@+id/edittext_value"
                android:layout_alignBottom="@+id/tablayout_comparators"
                android:layout_alignTop="@+id/tablayout_comparators"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:padding="5dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
    </RelativeLayout>

    <CheckBox
        android:text="@string/send_push_notifications"
        android:id="@+id/send_push_notifications"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/notify"
        android:textAllCaps="true"/>

    <FrameLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:animateLayoutChanges="true"
        android:layout_marginTop="10dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </FrameLayout>

    <Button
        android:id="@+id/save_notifications"
        android:background="@color/ayla_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/save_notifications"
        android:textColor="@android:color/white"
        />

</LinearLayout>
</android.support.v4.widget.NestedScrollView>