<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:mstb="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/property_selection_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/schedule_action_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/schedule_properties_action_descripton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.Medium"
            android:padding="8dp"
            android:layout_marginBottom="4dp"
            android:textStyle="italic"
            android:text="@string/schedule_properties_update_description"/>

        <LinearLayout
            android:id="@+id/property_selection_checkbox_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/property_selection_spinner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/location_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:layout_marginLeft="20dp"></Spinner>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/schedule_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="6dp"
            android:text="@string/action_value"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/schedule_action_value_text"
            style="@android:style/TextAppearance.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:inputType="textCapWords|textNoSuggestions"
            android:singleLine="true"
            android:textStyle="italic"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="6dp"
            android:text="@string/action_execute"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

        <org.honorato.multistatetogglebutton.MultiStateToggleButton
            android:id="@+id/mstb_multi_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            mstb:values="@array/action_execute_array"
            mstb:mstbPrimaryColor="@color/colorPrimaryDark"
            mstb:mstbSecondaryColor="@color/card_detail_text"
            />
    </LinearLayout>
    <Switch
        android:id="@+id/schedule_action_enabled_switch"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/schedule_title_layout"
        android:padding="10dp"
        android:switchTextAppearance="@android:style/TextAppearance.Large"
        android:text="@string/schedule_active_switch"
        android:textOff="@string/disabled"
        android:textOn="@string/enabled"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_action_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/action_remove_all"/>

        <Button
            android:id="@+id/button_action_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/action_save"/>
    </LinearLayout>


</LinearLayout>